Getting parameters /visit

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -30,8 +30,8 @@
 	</div>
 
 	<div class="form-group">
-		<label>Выберите себе парикмахера</label>
-		<select class="form-control">
+		<label>Ваш парикмахер:</label>
+		<select name="barber" class="form-control">
 			<option value="Anybody">Не важно</option>
 			<option value="Walter">Walter White</option>
 			<option value="Jessie">Jessie Pinkman</option>
