--- a/views/visit.erb
+++ b/views/visit.erb
@@ -42,6 +42,9 @@
 	<button type="submit" class="btn btn-primary">Записаться</button>
 </form>
 
+<script type="text/javascript">
+	
+</script>
 
 </body>
 </html>
