--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -4,27 +4,29 @@
 	<title>Barber Shop</title>
 </head>
 <body>
-<h1>Обратная связь</h1>
+<h2>Обратная связь</h2>
 
 <form action="/contacts" method="POST" role="form">
 
 	<div class="form-group">
 		<label>Ваше имя</label>
-		<input name="user_name" type="text" class="form-control" placeholder="Имя">
+		<input name="name" type="text" class="form-control" placeholder="Имя" value="<%=@name%>">
 	</div>
 
 	<div class="form-group">
 		<label>Ваша электронная почта</label>
-		<input name="user_mail" type="text" class="form-control" placeholder="Электропочта">
+		<input name="mail" type="text" class="form-control" placeholder="Электропочта" value="<%=@mail%>">
 	</div>
 
 	<div class="form-group">
 		<label>Введите сообщение</label>
-		<textarea name="user_message" type="text" class="form-control" placeholder="Ваше сообщение" rows="6"></textarea>
+		<textarea name="message" type="text" class="form-control" placeholder="Ваше сообщение" rows="6"><%=@message%></textarea>
 	</div>
 
 	<button type="submit" class="btn btn-primary">Отправить нам</button>
 </form>
+
+
 
 </body>
 </html>
