--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
 		<title>Barber Shop</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	    <script src="/vendor/jquery-1.9.1.min.js"></script>
@@ -45,12 +45,12 @@
 			    <ul class="nav navbar-nav navbar-right">
 			        <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=username%> <b class="caret"></b></a>
-			        <ul class="dropdown-menu">
-			            <li><a href="/login/form">Войти в кабинет</a></li>
-			            <li class="divider"></li>
-			            <li><a href="/logout">Выйти</a></li>
-			        </ul>
-			      </li>
+				        <ul class="dropdown-menu">
+				            <li><a href="/login/form">Войти в кабинет</a></li>
+				            <li class="divider"></li>
+				            <li><a href="/logout">Выйти</a></li>
+				        </ul>
+			      	</li>
 			    </ul>
 
 			  </div><!--/.nav-collapse -->
